--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "newapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://paristecnoarg.github.io/mercadopago",
+  "homepage": "http://paristecnoarg.github.io/mercadopago/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
