--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "14" # Puedes especificar la versión de Node.js que necesites
+          node-version: "20" # Actualizar a Node.js 20
 
       - name: Install dependencies
         run: npm install
@@ -25,7 +25,7 @@ jobs:
         run: npm run build
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4 # Actualizar a la versión 4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
